<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/paleGray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select"
            style="@style/BigTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/selectSaleMethod"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/BlackBgTitle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/gray"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:text="@string/loginPlease"
            android:textColor="@color/dustGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/Btn_In"
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_margin="40dp"
                android:background="@drawable/selector_btn_dine_in" />

            <Button
                android:id="@+id/btn_in"
                android:layout_width="256dp"
                android:layout_height="68dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/brush246_select"
                android:text="@string/dineIn"
                android:textColor="#FFF"
                android:textSize="32sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/Btn_Out"
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_margin="40dp"
                android:background="@drawable/selector_btn_take_away" />

            <Button
                android:id="@+id/btn_out"
                android:layout_width="256dp"
                android:layout_height="68dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/brush246_select"
                android:text="@string/takeAway"
                android:textColor="#FFF"
                android:textSize="32sp"
                android:visibility="gone" />

            <!--為了過flavor build用，實際上沒用-->
            <TextView
                android:id="@+id/tvBigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:textColor="@color/black"
                android:visibility="gone" />

            <!--    flavor 需要    -->
            <TextView
                android:id="@+id/tv_welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:lineSpacingExtra="12sp"
                android:textColor="@color/black"
                android:textSize="64sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <include layout="@layout/right_menu" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="55dp"
            android:background="@drawable/selector_btn_login" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_brands"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/tv_login"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAd"
        app:layout_constraintVertical_bias="1.0"
        app:spanCount="4"
        tools:listitem="@layout/item_payments"
        android:visibility="gone"/>

</LinearLayout>
